clean up file browser

--- a/views/browse-file.hbs
+++ b/views/browse-file.hbs
@@ -18,7 +18,8 @@
 
 	<style type="text/css">
 	body { margin:0; }
-	p.cmd { padding:5px 0 5px 10px; background-color:#EEEEEE; }
+	p.hd { padding:5px 10px; background-color:#EEEEEE; }
+	p.hd a { float:right; }
 	</style>
 
 	<meta name="MSSmartTagsPreventParsing" content="TRUE" />
@@ -27,7 +28,7 @@
 
 <body>
 
-<p class="cmd"><a href="{{raw}}">Plain</a></p>
+<p class="hd"><a href="{{raw}}">Plain</a>{{title}}</p>
 
 <pre class="brush:{{type}}">
 {{content}}
