back link on all pages

--- a/views/browse-bundle-module.hbs
+++ b/views/browse-bundle-module.hbs
@@ -9,9 +9,12 @@ YUI().use('{{name}}', function(Y) { ... });
 
 <h2>{{name}} {{vers}}</h2>
 
-<p>Uploaded by {{author}}</p>
-
-<p>Notes:  {{notes}}</p>
+<p>
+	<span class="notes">
+	Uploaded by {{author}} <br>
+	Notes:  {{notes}}
+	</span>
+</p>
 
 <p>{{desc}}</p>
 
