--- a/views/browse-bundle-version.hbs
+++ b/views/browse-bundle-version.hbs
@@ -5,9 +5,12 @@
 
 <h2>{{bundle}} {{vers}}</h2>
 
-<p>Uploaded by {{author}}</p>
-
-<p>Notes:  {{notes}}</p>
+<p>
+	<span class="notes">
+	Uploaded by {{author}} <br>
+	Notes:  {{notes}}
+	</span>
+</p>
 
 <p>{{desc}}</p>
 
