--- a/views/browse-top.hbs
+++ b/views/browse-top.hbs
@@ -1,4 +1,5 @@
 {{#if ns}}
+<div class="ns-list">
 	<h2>Namespaces of related modules</h2>
 
 	<table>
@@ -12,9 +13,11 @@
 		</tr>
 	{{/ns}}
 	</table>
+</div>
 {{/if}}
 
 {{#if bundle}}
+<div class="bundle-list">
 	<h2>Bundles of modules released together</h2>
 
 	<table>
@@ -28,4 +31,5 @@
 		</tr>
 	{{/bundle}}
 	</table>
+</div>
 {{/if}}
