--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,9 +10,16 @@
 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.4.0/build/cssbase/base-min.css" />
 
 	<style type="text/css">
-	body { margin:10px; }
+	body { margin:0; }
+	.body { margin:0 10px; }
 
-	.code { float:right; }
+	h1 { font-size:100%; text-align:center; margin:0; padding:5px 10px; background-color:#EEEEEE; }
+	a.back { float:left; padding:5px 10px; }
+
+	.ns-list { float:left; margin-right:50px; }
+	.bundle-list { float:left; }
+
+	.code { float:right; margin-top:1em; }
 	.code pre { border:1px solid black; padding:5px; background-color:#EEEEEE; }
 	.code pre .list-item:after { content:"," }
 	.code pre .list-item:last-child:after { content:"" }
@@ -21,6 +28,8 @@
 	.file-tree li {  list-style-type:none; padding-left:17px; padding-top:5px; }
 	.file-tree li.directory { background:url("/img/directory.png") left 5px no-repeat; }
 	.file-tree li.file { background:url("/img/file.png") left 5px no-repeat; }
+
+	.notes { background-color:#EEEEEE; }
 	</style>
 
 	<meta name="MSSmartTagsPreventParsing" content="TRUE" />
@@ -29,9 +38,12 @@
 
 <body class="yui3-skin-sam">
 
+{{#if back}}<a class="back" href="/browse?{{back}}">&larr; Back</a>{{/if}}
 <h1>{{title}}</h1>
 
+<div class="body">
 {{{body}}}
+</div>
 
 </body>
 </html>
