--- a/views/browse-module-version.hbs
+++ b/views/browse-module-version.hbs
@@ -16,9 +16,12 @@ YUI().use('sp-{{ns}}-{{name}}', function(Y) { ... });
 
 <h2>{{name}} {{vers}}</h2>
 
-<p>Uploaded by {{author}}</p>
-
-<p>Notes:  {{notes}}</p>
+<p>
+	<span class="notes">
+	Uploaded by {{author}} <br>
+	Notes:  {{notes}}
+	</span>
+</p>
 
 <p>{{desc}}</p>
 
