simplify code by using request module

--- a/views/browse-bundle-module.hbs
+++ b/views/browse-bundle-module.hbs
@@ -9,11 +9,9 @@ YUI().use('{{name}}', function(Y) { ... });
 
 <h2>{{name}} {{vers}}</h2>
 
-<p>
-	<span class="notes">
-	Uploaded by {{author}} <br>
-	Notes:  {{notes}}
-	</span>
+<p class="notes">
+Uploaded by {{author}} <br>
+Notes:  {{notes}}
 </p>
 
 <p>{{desc}}</p>
