--- a/views/browse-bundle-version.hbs
+++ b/views/browse-bundle-version.hbs
@@ -5,11 +5,9 @@
 
 <h2>{{bundle}} {{vers}}</h2>
 
-<p>
-	<span class="notes">
-	Uploaded by {{author}} <br>
-	Notes:  {{notes}}
-	</span>
+<p class="notes">
+Uploaded by {{author}} <br>
+Notes:  {{notes}}
 </p>
 
 <p>{{desc}}</p>
