--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -29,7 +29,7 @@
 	.file-tree li.directory { background:url("/img/directory.png") left 5px no-repeat; }
 	.file-tree li.file { background:url("/img/file.png") left 5px no-repeat; }
 
-	.notes { background-color:#EEEEEE; }
+	.notes { font-weight:bold; }
 	</style>
 
 	<meta name="MSSmartTagsPreventParsing" content="TRUE" />
