--- a/views/browse-module-version.hbs
+++ b/views/browse-module-version.hbs
@@ -16,11 +16,9 @@ YUI().use('sp-{{ns}}-{{name}}', function(Y) { ... });
 
 <h2>{{name}} {{vers}}</h2>
 
-<p>
-	<span class="notes">
-	Uploaded by {{author}} <br>
-	Notes:  {{notes}}
-	</span>
+<p class="notes">
+Uploaded by {{author}} <br>
+Notes:  {{notes}}
 </p>
 
 <p>{{desc}}</p>
