finished conversion to Y.Parallel fixed all modules to accept Y instance from main script added "combo" config for manager, so raw file content is shown live added Copy button for all code samples upgraded to YUI 3.5.0

--- a/views/browse-module-version.hbs
+++ b/views/browse-module-version.hbs
@@ -1,6 +1,7 @@
 <div class="code">
+<button id="copy-code">Copy</button>
 <p>To use this version of {{name}}:</p>
-<pre>
+<pre id="sample-code">
 var moduleVersion =
 {
 	'sp-{{ns}}-{{name}}': '{{vers}}',
