--- a/views/browse-namespace.hbs
+++ b/views/browse-namespace.hbs
@@ -1,6 +1,7 @@
 <div class="code">
+<button id="copy-code">Copy</button>
 <p>To use the latest versions of modules from the {{ns}} namespace,<br>configure a Loader group as follows:</p>
-<pre>
+<pre id="sample-code">
 var moduleVersion =
 {
 <span class="list">{{#modules}}    <span class="list-item">'sp-{{../ns}}-{{name}}': '{{vers}}'</span>
