--- a/views/browse-bundle-module.hbs
+++ b/views/browse-bundle-module.hbs
@@ -1,6 +1,7 @@
 <div class="code">
+<button id="copy-code">Copy</button>
 <p>To use this version of {{name}}:</p>
-<pre>
+<pre id="sample-code">
 window.YUI_config = { ... }
 
 YUI().use('{{name}}', function(Y) { ... });
