--- a/views/browse-bundle-version.hbs
+++ b/views/browse-bundle-version.hbs
@@ -1,4 +1,5 @@
 <div class="code">
+<button id="copy-code">Copy</button>
 <p>To use this version of {{bundle}}, configure a Loader group as follows:</p>
 {{{code}}}
 </div>
