--- a/views/browse-bundle.hbs
+++ b/views/browse-bundle.hbs
@@ -1,4 +1,5 @@
 <div class="code">
+<button id="copy-code">Copy</button>
 <p>To use the latest version of {{bundle}}, configure a Loader group as follows:</p>
 {{{code}}}
 </div>
