--- a/views/browse-module.hbs
+++ b/views/browse-module.hbs
@@ -1,6 +1,7 @@
 <div class="code">
+<button id="copy-code">Copy</button>
 <p>To use the latest version of {{name}}:</p>
-<pre>
+<pre id="sample-code">
 var moduleVersion =
 {
 	'sp-{{ns}}-{{name}}': '{{vers}}',
