--- a/views/browse-bundle-version.hbs
+++ b/views/browse-bundle-version.hbs
@@ -7,13 +7,13 @@
 <h2>{{bundle}} {{vers}}</h2>
 
 <p class="notes">
-Uploaded by {{author}} <br>
+Uploaded by <a href="mailto:{{author}}">{{author}}</a> <br>
 Notes:  {{notes}}
 </p>
 
 <p>{{desc}}</p>
 
-<h2>Modules</h2>
+<h3>Modules</h3>
 
 {{#if modules}}
 	<ul>
