--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,6 +27,8 @@
 	.code pre .list-item:last-child:after { content:"" }
 	#copy-code { float:right; }
 
+	.file-title { margin-bottom:0; }
+	.file-tree { margin-left:10px; }
 	.file-tree ul { margin:0; }
 	.file-tree li {  list-style-type:none; padding-left:17px; padding-top:5px; }
 	.file-tree li.directory { background:url("/img/directory.png") left 5px no-repeat; }
