fix browse to be more error-resistant

--- a/views/browse-bundle.hbs
+++ b/views/browse-bundle.hbs
@@ -1,8 +1,10 @@
-<div class="code">
-<button id="copy-code">Copy</button>
-<p>To use the latest version of {{bundle}}, configure a Loader group as follows:</p>
-{{{code}}}
-</div>
+{{#if code}}
+	<div class="code">
+	<button id="copy-code">Copy</button>
+	<p>To use the latest version of {{bundle}}, configure a Loader group as follows:</p>
+	{{{code}}}
+	</div>
+{{/if}}
 
 <h2>{{bundle}}</h2>
 
