support wildcard user for a group show ns/bundle group when browsing

--- a/views/browse-namespace.hbs
+++ b/views/browse-namespace.hbs
@@ -43,6 +43,8 @@ window.YUI_config =
 
 <p>{{desc}}</p>
 
+<p>Managed by group: {{group}}</p>
+
 <table>
 <tr>
     <th>Module</th><th>Latest Version</th><th>Release Date</th>
