add tests for YUI loader

--- a/views/browse-bundle-module.hbs
+++ b/views/browse-bundle-module.hbs
@@ -2,7 +2,7 @@
 <button id="copy-code">Copy</button>
 <p>To use this version of {{name}}:</p>
 <pre id="sample-code">
-window.YUI_config = { ... }
+window.YUI_config = { ... };
 
 YUI().use('{{name}}', function(Y) { ... });
 </pre>
