--- a/views/browse-module-version.hbs
+++ b/views/browse-module-version.hbs
@@ -9,7 +9,7 @@ var moduleVersion =
 };
 
 function insertVersion(m) { ... }
-window.YUI_config = { ... }
+window.YUI_config = { ... };
 
 YUI().use('sp-{{ns}}-{{name}}', function(Y) { ... });
 </pre>
