--- a/views/browse-module.hbs
+++ b/views/browse-module.hbs
@@ -10,7 +10,7 @@
 	};
 
 	function insertVersion(m) { ... }
-	window.YUI_config = { ... }
+	window.YUI_config = { ... };
 
 	YUI().use('sp-{{ns}}-{{name}}', function(Y) { ... });
 	</pre>
