browse members of a group

--- a/views/browse-namespace.hbs
+++ b/views/browse-namespace.hbs
@@ -43,7 +43,7 @@ window.YUI_config =
 
 <p>{{desc}}</p>
 
-<p>Managed by group: {{group}}</p>
+<p>Managed by group: <a href="/group?name={{group}}">{{group}}</a></p>
 
 <table>
 <tr>
