--- a/views/browse-bundle.hbs
+++ b/views/browse-bundle.hbs
@@ -10,7 +10,7 @@
 
 <p>{{desc}}</p>
 
-<p>Managed by group: {{group}}</p>
+<p>Managed by group: <a href="/group?name={{group}}">{{group}}</a></p>
 
 <table>
 <tr>
