--- a/views/browse-file.hbs
+++ b/views/browse-file.hbs
@@ -1,41 +1,76 @@
 <!DOCTYPE HTML>
+<html lang="en">
 <html>
 
 <head>
-	<title>{{title}}</title>
-	<meta http-equiv=content-type content="text/html; charset=utf-8">
+    <meta charset="utf-8">
+    <meta name="MSSmartTagsPreventParsing" content="TRUE" />
+    <meta http-equiv="X-UI-Compatible" content="IE=edge,chrome=1" />
 
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.4.0/build/cssreset/reset-min.css" />
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.4.0/build/cssfonts/fonts-min.css" />
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.4.0/build/cssbase/base-min.css" />
+    <title>{{title}}</title>
 
-	<script type="text/javascript" src="/syntax/shCore.js"></script>
-	<script type="text/javascript" src="/syntax/shBrushJScript.js"></script>
-	<script type="text/javascript" src="/syntax/shBrushCSS.js"></script>
-	 
-	<link rel="stylesheet" type="text/css" href="/syntax/shCore.css" />
-	<link rel="stylesheet" type="text/css" href="/syntax/shThemeDefault.css" />
+    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.4.0/build/cssreset/reset-min.css" />
+    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.4.0/build/cssfonts/fonts-min.css" />
+    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.4.0/build/cssbase/base-min.css" />
 
-	<style type="text/css">
-	body { margin:0; }
-	h1 { font-size:100%; text-align:center; margin:0; padding:5px 10px; background-color:#EEEEEE; }
-	a.back { float:left; padding:5px 10px; }
-	a.plain { float:right; padding:5px 10px; }
-	</style>
+    <script type="text/javascript" src="/syntax/shCore.js"></script>
+    <script type="text/javascript" src="/syntax/shBrushJScript.js"></script>
+    <script type="text/javascript" src="/syntax/shBrushCSS.js"></script>
+     
+    <link rel="stylesheet" type="text/css" href="/syntax/shCore.css" />
+    <link rel="stylesheet" type="text/css" href="/syntax/shThemeDefault.css" />
 
-	<meta name="MSSmartTagsPreventParsing" content="TRUE" />
-	<meta http-equiv="X-UI-Compatible" content="IE=edge,chrome=1" />
+    <style type="text/css">
+    body {margin:0;}
+
+    a, a:link, a:visited {text-decoration:none;font-weight:bold;color:#3a6;}
+    a:hover {text-decoration:underline;}
+
+    .drill-back {margin-right:6px;}
+
+    .header {height:40px;padding:0 18px;border-bottom:1px solid #cacaca;background-color:#eaeaea;
+        background-image:linear-gradient(top, #f7f7f7 0%, #e7e7e7 100%);
+        background-image:-o-linear-gradient(top, #f7f7f7 0%, #e7e7e7 100%);
+        background-image:-moz-linear-gradient(top, #f7f7f7 0%, #e7e7e7 100%);
+        background-image:-webkit-linear-gradient(top, #f7f7f7 0%, #e7e7e7 100%);
+        background-image:-ms-linear-gradient(top, #f7f7f7 0%, #e7e7e7 100%);}
+    .header h1 {float:left;margin:0;height:40px;line-height:40px;padding-right:18px;border-right:1px solid #e7e7e7;}
+    .header .nav {float:left;height:40px;line-height:40px;padding-left:12px;border-left:1px solid #fff;font-weight:bold;}
+
+    .content {margin:0 18px;}
+    .content .nav .drill-back {float:left;line-height:150%;}
+    .content .nav .toggle-code-highlight {float:right;font-size:108%;font-weight:normal;}
+    .content .nav a:hover {text-decoration:none;}
+    </style>
 </head>
 
-<body>
+<body class="yui3-skin-sam">
 
-<a class="back" href="/browse?{{back}}">&larr; Back</a>
-<a class="plain" href="{{raw}}">Plain</a>
-<h1>{{title}}</h1>
+<header>
+    <div class="header">
+        <h1>{{title}}</h1>
+        <nav>
+            <div class="nav">
+                <!-- reserved for future use -->
+            </div>
+        </nav>
+    </div>
+</header>
 
-<pre class="brush:{{type}}">
-{{content}}
-</pre>
+<section>
+    <div class="section content">
+        <nav>
+            <div class="nav">
+                {{#if back}}<a class="drill-back" href="/browse?{{back}}" title="Move back one level">&#9664;</a>{{/if}}
+				<a class="toggle-code-highlight" href="{{raw}}" title="Disable syntax highlighting">&#8855; disable syntax highlighting</a>
+            </div>
+        </nav>
+        <h2>uifwk-bar 14.2.0.0.253</h2>
+        <pre class="brush:{{type}}">
+            {{content}}
+        </pre>
+    </div>
+</section>
 
 <script type="text/javascript">
 SyntaxHighlighter.all();
