further HTML and CSS refinements

--- a/views/browse-file.hbs
+++ b/views/browse-file.hbs
@@ -34,13 +34,15 @@
         background-image:-moz-linear-gradient(top, #f7f7f7 0%, #e7e7e7 100%);
         background-image:-webkit-linear-gradient(top, #f7f7f7 0%, #e7e7e7 100%);
         background-image:-ms-linear-gradient(top, #f7f7f7 0%, #e7e7e7 100%);}
-    .header h1 {float:left;margin:0;height:40px;line-height:40px;padding-right:18px;border-right:1px solid #e7e7e7;}
+    .header h1 {float:left;margin:0;height:40px;line-height:40px;padding-right:18px;border-right:1px solid #d9d9d9;}
     .header .nav {float:left;height:40px;line-height:40px;padding-left:12px;border-left:1px solid #fff;font-weight:bold;}
 
     .content {margin:0 18px;}
     .content .nav .drill-back {float:left;line-height:150%;}
     .content .nav .toggle-code-highlight {float:right;font-size:108%;font-weight:normal;}
     .content .nav a:hover {text-decoration:none;}
+    .content h2 {border-bottom:1px solid #e0e0e0;padding-bottom:12px;}
+    .content .ns-list h2, .content .bundle-list h2 {padding-bottom:0;border-bottom:none;margin-left:0;}
     </style>
 </head>
 
