--- a/views/browse-root.hbs
+++ b/views/browse-root.hbs
@@ -1,5 +1,6 @@
 {{#if ns}}
-<div class="ns-list">
+<section>
+    <div class="section ns-list">
 	<h2>Namespaces of related modules</h2>
 
 	<table>
@@ -13,11 +14,13 @@
 		</tr>
 	{{/ns}}
 	</table>
-</div>
+    </div>
+</section>
 {{/if}}
 
 {{#if bundle}}
-<div class="bundle-list">
+<section>
+    <div class="section bundle-list">
 	<h2>Bundles of modules released together</h2>
 
 	<table>
@@ -31,5 +34,6 @@
 		</tr>
 	{{/bundle}}
 	</table>
-</div>
+    </div>
+</section>
 {{/if}}
