page with list of user groups

--- a/views/browse-group-members.hbs
+++ b/views/browse-group-members.hbs
@@ -1,13 +1,19 @@
 <h2>Members of group: {{group}}</h2>
 
-{{#if users}}
-	<ul>
-	{{#each users}}
-		<li><a href="mailto:{{.}}">{{.}}</a></li>
-	{{/each}}
-	</ul>
-
-	<p>Only existing members of this group are allowed to add new members.</p>
+{{#if any}}
+	<p>This group allows access to all users.</p>
 {{else}}
-	<p>This group does not exist.</p>
+
+	{{#if users}}
+		<ul>
+		{{#each users}}
+			<li><a href="mailto:{{.}}">{{.}}</a></li>
+		{{/each}}
+		</ul>
+
+		<p>Only existing members of this group are allowed to add new members.</p>
+	{{else}}
+		<p>This group does not exist.</p>
+	{{/if}}
+
 {{/if}}
