upgrade to express 3.x

--- a/views/browse-bundle-version.hbs
+++ b/views/browse-bundle-version.hbs
@@ -1,7 +1,9 @@
+{{!< layouts/browse }}
+
 <div class="code">
 <button id="copy-code">Copy</button>
 <p>To use this version of {{bundle}}, configure a Loader group as follows:</p>
-{{{code}}}
+{{> code-bundle}}
 </div>
 
 <h2>{{bundle}} {{vers}}</h2>
