--- a/views/partials/code-bundle.hbs
+++ b/views/partials/code-bundle.hbs
@@ -8,7 +8,7 @@ window.YUI_config =
             ext:       true,
             combine:   true,
             comboBase: 'http://my-stockpile-host/combo?',
-            root:      '{{bundle}}/{{version}}/',
+            root:      '{{bundle}}/{{code_vers}}/',
             patterns:
             {
                 '{{bundle}}-':      { },
