--- a/views/browse-namespace.hbs
+++ b/views/browse-namespace.hbs
@@ -1,3 +1,5 @@
+{{!< layouts/browse }}
+
 <div class="code">
 <button id="copy-code">Copy</button>
 <p>To use the latest versions of modules from the {{ns}} namespace,<br>configure a Loader group as follows:</p>
